[project]
name = "servn"
version = "0.1.0"
description = "A simple way to create your web-service"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
  { name="Noa ADJAMGBA", email="noa.adjamgba@gmail.com" }
]
dependencies = ["json", "xmlmtodict", "socket", "re", "os", "threading", "inspect"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
